Dịch: trang chủ & trang gói cước Thay đổi: bước mua gói cước 4 (thiếu từ lần trước)

--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
 				<div class="clearfix">
 					<div id="btn-group-difficulty" class="btn-group btn-group-difficulty pull-left hidden-sm hidden-xs">
 						<button type="button" class="btn btn-default active">Tất cả</button>
-						<button type="button" class="btn btn-default"><span class="pull-left ec-difficulty beginner"></span>Beginner</button>
-						<button type="button" class="btn btn-default"><span class="pull-left ec-difficulty intermediate"></span>Intermediate</button>
-						<button type="button" class="btn btn-default"><span class="pull-left ec-difficulty advanced"></span>Advanced</button>
+						<button type="button" class="btn btn-default"><span class="pull-left ec-difficulty beginner"></span>Sơ cấp</button>
+						<button type="button" class="btn btn-default"><span class="pull-left ec-difficulty intermediate"></span>Trung cấp</button>
+						<button type="button" class="btn btn-default"><span class="pull-left ec-difficulty advanced"></span>Cao cấp</button>
 					</div>
 
 					<div class="dropdown pull-left visible-sm visible-xs">
@@ -207,9 +207,9 @@
 
 						<ul id="#lst-group-difficulty" class="dropdown-menu">
 							<li class="hide"><a href="#"><span class="pull-left ec-difficulty"></span>Tất cả</a></li>
-							<li><a href="#"><span class="pull-left ec-difficulty beginner"></span> Beginner</a></li>
-							<li><a href="#"><span class="pull-left ec-difficulty intermediate"></span> Intermediate</a></li>
-							<li><a href="#"><span class="pull-left ec-difficulty advanced"></span> Advanced</a></li>
+							<li><a href="#"><span class="pull-left ec-difficulty beginner"></span> Sơ cấp</a></li>
+							<li><a href="#"><span class="pull-left ec-difficulty intermediate"></span> Trung cấp</a></li>
+							<li><a href="#"><span class="pull-left ec-difficulty advanced"></span> Cao cấp</a></li>
 						</ul>
 					</div>
 
@@ -645,11 +645,10 @@
             <div class="col-md-9">
                 <div class="row">
                     <div class="col-md-8">
-                        <h1 class="row heading headline">
-                            Our 100% Commit Guarantee                        </h1>
+                        <h1 class="row heading headline">Cam kết đảm bảo 100% của chúng tôi</h1>
                         <div class="row col-md-12 row-guarantee">
                             <h2 class="row headline">
-                                Follow these 4 steps with our Platinum plan and we guarantee that you will level up in 3 months, <br><span class="small-headline">or we give you 100% of your money back.<br><span class="small-headline">                            </span></span></h2>
+                                Bạn hãy thực hiện đủ 4 bước sau và dùng gói học Platinum của chúng tôi, chúng tôi đảm bảo rằng trình độ của bạn sẽ được nâng lên trong vòng 3 tháng,<br><span class="small-headline">hoặc chúng tôi sẽ hoàn lại 100% tiền cho bạn.<br><span class="small-headline"></span></span></h2>
                             <div class="col-md-offset-1">
                                 <a href="/help?forum=22968018&amp;article=39478478" target="_blank">
                                     <img class="pull-left img-responsive guarantee-badge" src="common/v1/img/platinum.png" width="180" alt="">
@@ -664,30 +663,30 @@
                     <img src="common/v1/img/graph.png" alt="">
                 </div>
                 <div class="row">
-                    <h3 class="heading">ADVANCED</h3>
-                    <h4 class="small-heading">Become An Expert</h4>
+                    <h3 class="heading">CAO CẤP</h3>
+                    <h4 class="small-heading">Trở thành một chuyên gia</h4>
                     <ul class="list-unstyled">
-                        <li>- Learn idioms and slang</li>
-                        <li>- Master Academic Vocabulary</li>
-                        <li>- Improve and reduce your accent</li>
+                        <li>- Học các thành ngữ và tiếng lóng</li>
+                        <li>- Nắm vững từ vựng học thuật</li>
+                        <li>- Cải thiện trọng âm và giảm bớt thanh (âm) sắc</li>
                     </ul>
                 </div>
                 <div class="row">
-                    <h3 class="heading heading-small">INTERMEDIATE</h3>
-                    <h4 class="small-heading">Get Fluent</h4>
+                    <h3 class="heading heading-small">TRUNG CẤP</h3>
+                    <h4 class="small-heading">Sử dụng tiếng Anh một cách trôi chảy</h4>
                     <ul class="list-unstyled">
-                        <li>- English for study or work</li>
-                        <li>- Expand your vocabulary</li>
-                        <li>- Speak English when you travel</li>
+                        <li>- trong học tập và công việc</li>
+                        <li>- khi đi du lịch</li>
+                        <li>- mở rộng vốn từ vựng</li>
                     </ul>
                 </div>
                 <div class="row">
-                    <h3 class="heading heading-small">BEGINNER</h3>
-                    <h4 class="small-heading">Learn The Basics</h4>
+                    <h3 class="heading heading-small">SƠ CẤP</h3>
+                    <h4 class="small-heading">Nắm được tiếng Anh cơ bản</h4>
                     <ul class="list-unstyled">
-                        <li>- Meet &amp; greet people</li>
-                        <li>- Master basic words &amp; phrases</li>
-                        <li>- Talk about yourself &amp; life</li>
+                        <li>- Có thể gặp và chào hỏi mọi người</li>
+                        <li>- Nắm vững các từ và cụm từ cơ bản</li>
+                        <li>- Có khả năng nói về bản thân và cuộc sống</li>
                     </ul>
                 </div>
             </div>
@@ -698,12 +697,12 @@
 	<!-- How it works - BEGIN -->
 	<div class="how-it-works">
 		<div class="container">
-			<h1 class="heading">How it Works?</h1>
+			<h1 class="heading">Cách thức học</h1>
 
 			<div class="row step-thumbnails">
 				<div class="col-md-3">
 					<div class="step watch">
-						<h1 class="step-header">1 <span class="subtext">WATCH</span></h1>
+						<h1 class="step-header">1 <span class="subtext">XEM</span></h1>
 						<div ec-howitworks-video="watch-demo" track-on="Watch" class="text-center item ng-isolate-scope">
 							<img class="step-video-preview img-responsive" src="common/demo/howitworks/watch.jpg" alt="">
 
@@ -713,13 +712,13 @@
 							</video>
 						</div>
 						<div class="caption">
-							<p>WATCH a video a day, recommended based on your level and interests. Mark any words you don't know.</p>
+							<p>XEM mỗi ngày 1 video, dựa trên trình độ và sở thích của bạn. Đánh dấu lại những từ bạn không biết.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="step learn">
-						<h1 class="step-header">2 <span class="subtext">LEARN</span></h1>
+						<h1 class="step-header">2 <span class="subtext">HỌC</span></h1>
 						<div ec-howitworks-video="learn-demo" track-on="Learn" class="text-center item ng-isolate-scope">
 							<img class="step-video-preview img-responsive" src="common/demo/howitworks/learn.jpg" alt="">
 							<video class="img-responsive hide" id="learn-demo" poster="common/demo/howitworks/learn.jpg" preload="auto" height="152" width="270">
@@ -728,13 +727,13 @@
 							</video>
 						</div>
 						<div class="caption">
-							<p>LEARN your new words by filling in the blanks while interacting with the video line.</p>
+							<p>HỌC từ mới của bạn thông qua việc điền vào chỗ trống trong quá trình tương tác với các dòng video.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="step speak">
-						<h1 class="step-header">3 <span class="subtext">SPEAK</span></h1>
+						<h1 class="step-header">3 <span class="subtext">NÓI</span></h1>
 						<div ec-howitworks-video="speak-demo" track-on="Speak" class="text-center item ng-isolate-scope">
 							<img class="step-video-preview img-responsive" src="common/demo/howitworks/speak.jpg" alt="">
 							<video class="img-responsive hide" id="speak-demo" poster="common/demo/howitworks/speak.jpg" preload="auto" height="152" width="270">
@@ -743,7 +742,7 @@
 							</video>
 						</div>
 						<div class="caption">
-							<p>SPEAK your new words in context, getting instant feedback on your pronunciation and fluency.</p>
+							<p>NÓI các từ mới trong video và ngay lập tức được nhận xét về phát âm và mức độ trôi chảy của bạn.</p>
 						</div>
 					</div>
 				</div>
@@ -758,7 +757,7 @@
 							</video>
 						</div>
 						<div class="caption">
-							<p>GOLIVE! and have a 1-on-1 conversation with a private tutor about the video.</p>
+							<p>GOLIVE! và đối thoại 1 thầy 1 trò với một trợ giảng riêng về video đã chọn.</p>
 						</div>
 					</div>
 				</div>
