--- a/muagoicuoc-1.html
+++ b/muagoicuoc-1.html
@@ -90,8 +90,8 @@
 						</th>
 						<td>
 							<p class="product-helper-container">
-								<strong class="product-title">Watch</strong>
-								<small class="product-helper">over 10,000 videos with subtitles</small>
+								<strong class="product-title">Xem</strong>
+								<small class="product-helper">trên 10,000 video có phụ đề</small>
 							</p>
 						</td>
 						<td>Không giới hạn</td>
@@ -105,8 +105,8 @@
 						</th>
 						<td>
 							<p class="product-helper-container">
-							<strong class="product-title">Learn</strong>
-							<small class="product-helper">words by listening and typing</small>
+							<strong class="product-title">Học</strong>
+							<small class="product-helper">từ thông qua hoạt động nghe và đánh máy</small>
 							</p>
 						</td>
 						<td>Chỉ 2 video</td>
@@ -120,8 +120,8 @@
 						</th>
 						<td>
 							<p class="product-helper-container speak">
-							<strong class="product-title">Speak</strong>
-							<small class="product-helper">and get real-time pronunciation feedback</small>
+							<strong class="product-title">Nói</strong>
+							<small class="product-helper">và có ngay đánh giá về phát âm của bạn </small>
 							</p>
 						</td>
 						<td>Chỉ 2 video</td>
@@ -136,8 +136,8 @@
 						<td>
 							<p class="product-helper-container golive">
 							<strong class="product-title">GoLive!</strong>
-							<span ng-click="plan.openGoliveIntroModal()" class="toggle-golive-demo-video ec-link">Learn More</span><br><span class="golive-helper">Live 1 on 1 tutoring</span>
-							<small class="product-helper">with a teacher on your video lesson</small>
+							<span class="golive-helper">Học trực tuyến một thầy một trò</span>
+							<small class="product-helper">với giáo viên về bài video của bạn</small>
 							</p>
 						</td>
 						<td>-</td>
@@ -171,16 +171,18 @@
 
 			<div class="col-sm-3">
 				<blockquote>
-					<p>Learn more about <a href="#" data-toggle="modal" data-target="#modal-golive">GoLive!</a> - 1 to 1 live tutoring.</p>
+					<p>Tìm hiểu thêm về <a href="#" data-toggle="modal" data-target="#modal-golive">GoLive!</a> - học trực tuyến 1 thầy 1 trò.</p>
 				</blockquote>
 				<blockquote>
-					<p>Our 3-month <a href="#" data-toggle="modal" data-target="#modal-guarantee">Level Up Guarantee</a>.</p>
+					<p>Chúng tôi đảm bảo <a href="#" data-toggle="modal" data-target="#modal-guarantee">nâng trình độ của bạn trong 3 tháng</a>.</p>
 				</blockquote>
+				<!--
 				<blockquote>
 					<p><a href="#" data-toggle="modal" data-target="#modal-cancel">Cancel</a> your membership any time.</p>
 				</blockquote>
+				-->
 				<blockquote>
-					<p>Have more questions? Please contact us.</p>
+					<p>Nếu có thêm câu hỏi gì, xin hãy liê hệ với chúng tôi.</p>
 				</blockquote>
 			</div>
 		</div>
@@ -207,13 +209,13 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">Level Up Guarantee</h4>
+					<h4 class="modal-title">Đảm bảo nâng cao trình độ</h4>
 				</div>
 				<div class="modal-body">
 					<div class="row-fluid text-center">
-						<h1>FOLLOW OUR WEEKLY PROGRAM<br>AND YOU'LL LEVEL UP - <span>GUARANTEED</span></h1>
+						<h1>Theo chương trình hàng tuần của chúng tôi<br> và trình độ của bạn sẽ được nâng cao - <span>Chúng tôi đảm bảo</span></h1>
 
-						<p class="plans-sub-title">Every 3 months you will get a 1-on-1 assessment with a tutor who will track your improvement<br>and give you an updated customized learning plan.</p>
+						<p class="plans-sub-title">Cứ mỗi 3 tháng bạn sẽ gặp giáo viên của chúng tôi để đánh giá về quá trình học và mức độ tiến bộ của bạn.<br>Đồng thời giáo viên cũng gợi ý cho bạn một kế hoạch học tập phù hợp với tiến trình của bạn.</p>
 
 						<div class="row">
 							<img class="img-responsive margin-center" src="https://cdns.englishcentral.com/images/ec3/plans/guarantee-chart-en.jpg">
