Bổ sung ở footer: term of use & privacy policy

--- a/index.html
+++ b/index.html
@@ -826,6 +826,7 @@
 					<p>Địa chỉ: 57A Huỳnh Thúc Kháng, Láng Hạ, Đống Đa, Hà Nội.</p>
 					<p>Hotline: 0888.91.56.96. Email: <a href="mailto:myenglish@vnpt.vn">myenglish@vnpt.vn</a></p>
 					<p>Dịch vụ cung cấp thử nghiệm.</p>
+					<p><a href="http://myenglish.com.vn/tin-tuc/?aid=700110">Quy định sử dụng</a> | <a href="http://myenglish.com.vn/tin-tuc/?aid=700109">Chính sách bảo mật thông tin</a></p>
 				</div>
 			</div>
 			<div class="media col-sm-6 col-xs-12">
