--- a/muagoicuoc-3.html
+++ b/muagoicuoc-3.html
@@ -116,52 +116,51 @@
 					<hr>
 				</div>
 
-				<!-- Tạm thời bỏ - BEGIN 
-				<div class="customer-info">
+				<div class="provider-info">
+
 					<div class="form-group">
-						<label for="lastname" class="col-sm-3 control-label">Tên đầy đủ</label>
-						<div class="col-sm-9 row">
-							<div class="col-sm-6">
-								<input type="text" class="form-control" id="lastname" placeholder="Họ, đệm" maxlength="255">
-							</div>
-							<div class="col-sm-6">
-								<input type="text" class="form-control" id="firstname" placeholder="Tên" 
-								maxlength="255">
-							</div>
-							<span class="help-block"></span>
+						<label class="col-sm-3 control-label">Đơn vị cung cấp</label>
+						<div class="col-sm-9">
+							<p class="form-control-static">MyEnglish</p>
 						</div>
 					</div>
 
 					<div class="form-group">
-						<label for="email" class="col-sm-3 control-label">Email</label>
+						<label class="col-sm-3 control-label">Địa chỉ</label>
 						<div class="col-sm-9">
-							<input type="text" class="form-control" id="email" placeholder="Email" maxlength="255">
-							<span class="help-block"></span>
-						</div>
-					</div>
-					<div class="form-group">
-						<label for="mobile" class="col-sm-3 control-label">Số ĐTDĐ</label>
-						<div class="col-sm-9">
-							<input type="text" class="form-control" id="mobile" placeholder="Số điện thoại di động" maxlength="255">
-							<span class="help-block"></span>
+							<p class="form-control-static">Số 57 Huỳnh Thúc Kháng, Phường Láng Hạ, Quận Đống Đa, Hà Nội</p>
 						</div>
 					</div>
 
 					<div class="form-group">
-						<label for="address" class="col-sm-3 control-label">Địa chỉ</label>
+						<label class="col-sm-3 control-label">Email</label>
 						<div class="col-sm-9">
-							<input type="text" class="form-control" id="address" placeholder="Địa chỉ liên hệ" maxlength="500">
-							<span class="help-block"></span>
+							<p class="form-control-static">myenglish@vnpt.vn</p>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-sm-3 control-label">Số điện thoại</label>
+						<div class="col-sm-9">
+							<p class="form-control-static">088 891 5696</p>
 						</div>
 					</div>
 
 					<hr>
 				</div>
-				<!-- Tạm thời bỏ - END -->
+
+				<div class="form-group">
+					<div class="checkbox col-sm-offset-1 col-sm-9">
+						<label>
+							<input type="checkbox" id="term"> Tôi đồng ý với <a href="/quy-dinh-su-dung/">Quy định sử dụng</a>
+						</label>
+					</div>
+				</div>
 
 				<div class="form-group">
 					<div class="col-sm-offset-2 col-sm-9">
-						<a href="muagoicuoc-4.html" class="btn btn-success">Xác nhận »</a>
+						
+						<button href="muagoicuoc-4.html" class="btn btn-success">Xác nhận »</button>
 					</div>
 				</div>
 
