--- a/nangcap-2.html
+++ b/nangcap-2.html
@@ -133,8 +133,16 @@
 				<hr>
 
 				<div class="form-group">
+					<div class="checkbox col-sm-offset-1 col-sm-9">
+						<label>
+							<input type="checkbox" id="term"> Tôi đồng ý với <a href="/quy-dinh-su-dung/">Quy định sử dụng</a>
+						</label>
+					</div>
+				</div>
+
+				<div class="form-group">
 					<div class="col-sm-offset-2 col-sm-3">
-						<a href="nangcap-3.html" class="btn btn-primary">Xác nhận</a>
+						<button href="nangcap-3.html" class="btn btn-primary">Xác nhận</button>
 					</div>
 				</div>
 				</form>
