+ Thay đổi: thông tin footer, Bản quyền -> Sản phẩm + Thay đổi: how it works

--- a/index.html
+++ b/index.html
@@ -689,11 +689,10 @@
 					<div class="step watch">
 						<h1 class="step-header">1 <span class="subtext">XEM</span></h1>
 						<div ec-howitworks-video="watch-demo" track-on="Watch" class="text-center item ng-isolate-scope">
-							<img class="step-video-preview img-responsive" src="common/demo/howitworks/watch.jpg" alt="">
+							<img class="step-video-preview img-responsive" src="common/demo/howitworks/watch.png" alt="">
 
-							<video class="img-responsive hide" id="watch-demo" poster="common/demo/howitworks/watch.jpg" preload="auto" height="152" width="270">
-								<source src="common/demo/howitworks/watch-20170330.webm" type="video/webm"></source>
-								<source src="common/demo/howitworks/watch-20170330.mp4" type="video/mp4"></source>
+							<video class="img-responsive hide" id="watch-demo" poster="common/demo/howitworks/watch.png" preload="auto">
+								<source src="common/demo/howitworks/watch.mp4" type="video/mp4"></source>
 							</video>
 						</div>
 						<div class="caption">
@@ -705,10 +704,9 @@
 					<div class="step learn">
 						<h1 class="step-header">2 <span class="subtext">HỌC</span></h1>
 						<div ec-howitworks-video="learn-demo" track-on="Learn" class="text-center item ng-isolate-scope">
-							<img class="step-video-preview img-responsive" src="common/demo/howitworks/learn.jpg" alt="">
-							<video class="img-responsive hide" id="learn-demo" poster="common/demo/howitworks/learn.jpg" preload="auto" height="152" width="270">
-								<source src="common/demo/howitworks/learn-20170330.webm" type="video/webm"></source>
-								<source src="common/demo/howitworks/learn-20170330.mp4" type="video/mp4"></source>
+							<img class="step-video-preview img-responsive" src="common/demo/howitworks/learn.png" alt="">
+							<video class="img-responsive hide" id="learn-demo" poster="common/demo/howitworks/learn.png" preload="auto">
+								<source src="common/demo/howitworks/learn.mp4" type="video/mp4"></source>
 							</video>
 						</div>
 						<div class="caption">
@@ -720,10 +718,9 @@
 					<div class="step speak">
 						<h1 class="step-header">3 <span class="subtext">NÓI</span></h1>
 						<div ec-howitworks-video="speak-demo" track-on="Speak" class="text-center item ng-isolate-scope">
-							<img class="step-video-preview img-responsive" src="common/demo/howitworks/speak.jpg" alt="">
-							<video class="img-responsive hide" id="speak-demo" poster="common/demo/howitworks/speak.jpg" preload="auto" height="152" width="270">
-								<source src="common/demo/howitworks/speak-20170330.webm" type="video/webm"></source>
-								<source src="common/demo/howitworks/speak-20170330.mp4" type="video/mp4"></source>
+							<img class="step-video-preview img-responsive" src="common/demo/howitworks/speak.png" alt="">
+							<video class="img-responsive hide" id="speak-demo" poster="common/demo/howitworks/speak.png" preload="auto">
+								<source src="common/demo/howitworks/speak.mp4" type="video/mp4"></source>
 							</video>
 						</div>
 						<div class="caption">
@@ -735,10 +732,9 @@
 					<div class="step golive">
 						<h1 class="step-header">4 <span class="subtext">GOLIVE!</span></h1>
 						<div ec-howitworks-video="golive-demo" track-on="GoLive" class="text-center item ng-isolate-scope">
-							<img class="step-video-preview img-responsive" src="common/demo/howitworks/golive.jpg" alt="">
-							<video class="img-responsive hide" id="golive-demo" poster="common/demo/howitworks/golive.jpg" preload="auto" height="152" width="270">
-								<source src="common/demo/howitworks/golive-20170330.webm" type="video/webm"></source>
-								<source src="common/demo/howitworks/golive-20170330.mp4" type="video/mp4"></source>
+							<img class="step-video-preview img-responsive" src="common/demo/howitworks/golive.png" alt="">
+							<video class="img-responsive hide" id="golive-demo" poster="common/demo/howitworks/golive.png" preload="auto">
+								<source src="common/demo/howitworks/golive.mp4" type="video/mp4"></source>
 							</video>
 						</div>
 						<div class="caption">
@@ -816,7 +812,7 @@
 			</div>
 			<div class="media col-sm-6 col-xs-12">
 				<div class="copyright text-right-not-xs">
-					<p>Bản quyền thuộc về Tổng công ty Truyền thông (VNPT-Media)</p>
+					<p>Sản phẩm của Tổng công ty Truyền thông (VNPT-Media)</p>
 					<p>
 						<a href="http://vnptmedia.vn" target="_blank" title="Dịch vụ MyEnglish"><span class="logo logo-vnptmedia"></span></a>
 					</p>
