Cập nhất footer.

--- a/index.html
+++ b/index.html
@@ -812,8 +812,9 @@
 			</div>
 			<div class="media col-sm-6 col-xs-12">
 				<div class="copyright text-right-not-xs">
-					<p>Sản phẩm của Tổng công ty Truyền thông (VNPT-Media)</p>
+					<p>Sản phẩm của Tổng công ty Truyền thông. Powered by EnglishCentral.</p>
 					<p>
+						<a href="#" target="_blank" title="Dịch vụ MyEnglish"><span class="logo logo-englishcentral"></span></a>
 						<a href="http://vnptmedia.vn" target="_blank" title="Dịch vụ MyEnglish"><span class="logo logo-vnptmedia"></span></a>
 					</p>
 				</div>
