Cập nhật nội dung mail khi nâng hạng thành công.

--- a/email.html
+++ b/email.html
@@ -78,7 +78,7 @@
 		</tr>
 		<tr>
 			<th>Chủ đề</th>
-			<td>[MyEnglish] Nâng cấp / Gia hạn tài khoản</td>
+			<td>[MyEnglish] Nâng hạng tài khoản thành công</td>
 		</tr>
 		<tr>
 			<th>Nội dung</th>
@@ -89,7 +89,7 @@
 				<p>Sau đây là thông tin chi tiết giao dịch của bạn:<p>
 				<ul>
 					<li>Mã hoá đơn: #1236789</li>
-					<li>Hình thức giao dịch: Nâng cấp / Gia hạn</li>
+					<li>Hình thức thanh toán: Thẻ Ngân hàng / Ví / Thanh toán trực tiếp tại điểm giao dịch</li>
 					<li>Tên gói cước: Basic</li>
 					<li>Thời gian hiệu lực: 07/05/2017 - 07/08/2017</li>
 					<li>Số tiền thanh toán: 300.000 đ</li>
